changes in html

--- a/Index.html
+++ b/Index.html
@@ -431,7 +431,7 @@
         <div class="row text-white justify-content-center align-items-center">
           <div class="col-12 col-md-4 col-lg-4">
             <div>
-              <figure class="text-center">
+              <figure class="text-center border rounded-2 p-3 box_shadow">
                 <i class="fs-1 fa-solid fa-apple-whole"></i>
                 <figcaption class="py-3">
                   <h3>
@@ -443,7 +443,7 @@
             </div>
           </div>
           <div class="col-12 col-md-4 col-lg-4">
-            <figure class="text-center">
+            <figure class="text-center border rounded-2 p-3 box_shadow">
               <i class="fs-1 fa-solid fa-house-chimney-medical"></i>
           <figcaption class="py-3">
                 <h3>Health & Medicine</h3>
@@ -455,7 +455,7 @@
           </div>
           
           <div class="col-12 col-md-4 col-lg-4">
-            <figure class="text-center">
+            <figure class="text-center border rounded-2 p-3 box_shadow">
               <i class=" fs-1 fa-solid fa-user-graduate"></i>
                 <figcaption class="py-3">
                 <h3>
