--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <li>
               <a href="#" class="desktop-item">News/Updates</a>
               <input type="checkbox" id="showDrop" />
-              <label for="showDrop" class="mobile-item">Case Studies</label>
+              <label for="showDrop" class="mobile-item">News/Updates</label>
               <ul class="drop-menu">
                 <li>
                   <a href="#">Latest News</a>
@@ -511,7 +511,7 @@
 
     <section class="py-5 bg-img2 mt-5">
       <div class=" container p-5  d-flex justify-content-end"  >
-        <div class="bg-white rounded-4 p-5 w-50" data-aos="zoom-in-down" data-aos-duration="800">
+        <div id="mobile_change" class="bg-white  rounded-4 p-5 w-50" data-aos="zoom-in-down" data-aos-duration="800">
           <h1 class="py-3">They Need Your Help</h1>
           <p class="py-2">Sedac odio aliquet, fringilla odio eget, tincidunt nunc. Duis aliquet pulvinar ante tempor etiam lacus eros</p>
           <p class="pb-3">Sedac odio aliquet, fringilla odio eget, tincidunt nunc. Duis aliquet pulvinar ante tempor etiam lacus eros
