changes in Footer Section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!-- Navigation Start -->
 
-    <section class="navbar1 p-2" id="navbar">
+     <section class="navbar1 p-2" id="navbar">
       <nav class="">
         <div class="wrapper container">
           <div class="logo">
@@ -175,12 +175,13 @@
           </div>
         </div>
       </nav>
-    </section>
+    </section> 
 
     <!-- Navigation Ends -->
 
     <!-- Hero Section Carousel Start -->
-    <section class="container-fluid carousel_section p-0">
+
+   <section class="container-fluid carousel_section p-0">
       <div class="owl-carousel owl-theme position-relative">
         <div class="item">
           <div
@@ -249,7 +250,8 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> 
+
     <!-- Hero Section Carousel End -->
 
     <div class="space_between" id="space">
@@ -374,7 +376,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> 
 
     <!-- Our Focus Arias Section Ends -->
 
@@ -414,14 +416,14 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> 
 
     <!-- Who We Sre Section Ends -->
 
 
     <!-- We serve for peoples Section Start -->
 
-    <section class="py-5 bg-img1">
+     <section class="py-5 bg-img1">
       <div class="container">
         <div class="text-center text-white py-5">
           <h2>We serve for peoples</h2>
@@ -469,14 +471,14 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> 
 
 
     <!-- We serve for peoples Section Ends -->
 
     <!-- Do You Care Our Children? Section Start -->
 
-    <section>
+     <section>
       <div class="container">
         <div class="row justify-content-between align-items-center">
           <div class="col-12 col-md-12 col-lg-6">
@@ -502,14 +504,14 @@
         </div>
 
       </div>
-    </section>
+    </section> 
 
     <!-- Do You Care Our Children? Section Ends -->
 
 
     <!-- They Need Your Help Section Start -->
 
-    <section class="py-5 bg-img2 mt-5">
+     <section class="py-5 bg-img2 mt-5">
       <div class=" container p-5  d-flex justify-content-end"  >
         <div id="mobile_change" class="bg-white  rounded-4 p-5 w-50" data-aos="zoom-in-down" data-aos-duration="800">
           <h1 class="py-3">They Need Your Help</h1>
@@ -520,7 +522,7 @@
 
         </div>
       </div>
-    </section>
+    </section> 
 
     <!-- They Need Your Help Section Ends -->
 
@@ -543,11 +545,7 @@
             <div>
               <a href="#" class="donate_btn2">DONATE <i class= "ps-2 fa-regular fa-heart"></i></a>
             </div>
-            <ul class="list-unstyled d-flex justify-content-start pt-4 align-items-center" >
-              <li class="pe-4"><a class="text-decoration-none text-light" href="#"><i class="fs-5 fa-brands fa-twitter"></i></a></li>
-              <li class="pe-4"><a class="text-decoration-none text-light" href="#"><i class="fs-5 fa-brands fa-instagram"></i></a></li>
-              <li class="pe-4"><a class="text-decoration-none text-light" href="#"><i class="fs-5 fa-brands fa-facebook"></i></a></li>
-            </ul>
+
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3">
@@ -584,6 +582,14 @@
               <ul class="list-unstyled">
                 <li class="pb-2"><a class="text-decoration-none text-light" href="#"><i class="fa-solid fa-phone pe-2"></i>+91 9856765654</a></li>
                 <li class="pb-2"><a class="text-decoration-none text-light" href="#"><i class="fa-solid fa-envelope pe-2"></i>marg@gmail.com</a></li>
+              </ul>
+              <h6 class="text-white py-2">Follow Us On - </h6>
+
+              <ul class="list-unstyled d-flex justify-content-start align-items-center" >
+                <li class="pe-4"><a target="_blank" class="text-decoration-none text-light" href="https://www.linkedin.com/in/margfoundation/"><i class="social_handle fs-5 fa-brands fa-linkedin-in"></i></a></li>
+                <li class="pe-4"><a target="_blank" class="text-decoration-none text-light" href="https://www.instagram.com/margfoundation.in?igsh=Y2I0YTR1M20wOGEx"><i class="social_handle fs-5 fa-brands fa-instagram"></i></a></li>
+                <li class="pe-4"><a target="_blank" class="text-decoration-none text-light" href="https://www.facebook.com/p/MARG-Foundation-100077494004072/"><i class="social_handle fs-5 fa-brands fa-square-facebook"></i></a></li>
+                <li class="pe-4"><a target="_blank" class="text-decoration-none" href="https://www.youtube.com/@MARGFoundation?sub_confirmation=1"><i class="social_handle fs-5 fa-brands fa-youtube"></i></a></li>
               </ul>
             </div>
           </div>
